--- a/src/app/components/cards/card-table/card-table.component.html
+++ b/src/app/components/cards/card-table/card-table.component.html
@@ -119,7 +119,48 @@
           Aadharcard.pdf
           </td>
           <td>
-            <i class="fas fa-trash-alt"></i>
+            <!-- <i class="fas fa-trash-alt"></i> -->
+
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
+          </td>
+          <!-- <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
+          >
+            <app-table-dropdown></app-table-dropdown>
+          </td> -->
+        </tr>
+        <tr>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left flex items-center"
+          >
+          Rajveer Ishan Pavanbhai
+          </td>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+          >
+          Shukan party plot
+          </td>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+          >
+          Jodhpur Village Rd, Jodhpur Village, Ahmedabad, Gujarat 380015
+          </td>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+          >8544112266
+          </td>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+          >
+          https://www.shukan.com
+          </td>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+          >
+          Aadharcard.pdf
+          </td>
+          <td>
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
            </td>
           <!-- <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
@@ -158,7 +199,7 @@
           Aadharcard.pdf
           </td>
           <td>
-            <i class="fas fa-trash-alt"></i>
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
            </td>
           <!-- <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
@@ -197,7 +238,7 @@
           Aadharcard.pdf
           </td>
           <td>
-            <i class="fas fa-trash-alt"></i>
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
            </td>
           <!-- <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
@@ -236,7 +277,7 @@
           Aadharcard.pdf
           </td>
           <td>
-            <i class="fas fa-trash-alt"></i>
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
            </td>
           <!-- <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
@@ -275,8 +316,8 @@
           Aadharcard.pdf
           </td>
           <td>
-            <i class="fas fa-trash-alt"></i>
-           </td>
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
+          </td>
           <!-- <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
           >
@@ -314,8 +355,8 @@
           Aadharcard.pdf
           </td>
           <td>
-            <i class="fas fa-trash-alt"></i>
-           </td>
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
+          </td>
           <!-- <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
           >
@@ -353,46 +394,7 @@
           Aadharcard.pdf
           </td>
           <td>
-            <i class="fas fa-trash-alt"></i>
-           </td>
-          <!-- <td
-            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
-          >
-            <app-table-dropdown></app-table-dropdown>
-          </td> -->
-        </tr>
-        <tr>
-          <td
-            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left flex items-center"
-          >
-          Rajveer Ishan Pavanbhai
-          </td>
-          <td
-            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
-          >
-          Shukan party plot
-          </td>
-          <td
-            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
-          >
-          Jodhpur Village Rd, Jodhpur Village, Ahmedabad, Gujarat 380015
-          </td>
-          <td
-            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
-          >8544112266
-          </td>
-          <td
-            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
-          >
-          https://www.shukan.com
-          </td>
-          <td
-            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
-          >
-          Aadharcard.pdf
-          </td>
-          <td>
-           <i class="fas fa-trash-alt"></i>
+            <img src="./assets/img/deleteBut.jpeg" class="cursor-pointer" alt="logo" width="20px" height="20px"> 
           </td>
           <!-- <td
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-right"
