--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -1,115 +1,201 @@
-<!-- slider -->
-<div class="carousel relative  shadow-3xl bg-white">
-    <div class="carousel-inner relative overflow-hidden ">
-        <!--Slide 1-->
-        <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked" style="display: none;">
-        <div class="carousel-item absolute  opacity-0 " style="width: 100%;">
-            <img src="/assets/img/venueItem1.jpg" alt="">
+<app-index-navbar></app-index-navbar>
+
+
+<div class="max-w rounded overflow-hidden shadow-lg py-12 bg-red-50">
+
+    <!-- slider -->
+    <div class="carousel relative  shadow-3xl bg-white">
+        <div class="carousel-inner relative overflow-hidden ">
+            <!--Slide 1-->
+            <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked" style="display: none;">
+            <div class="carousel-item absolute  opacity-0 " style="width: 100%;">
+                <img src="/assets/img/venueItem1.jpg" alt="">
+
+            </div>
+            <label for="carousel-3" class="prev control-1 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-yellow-500 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
+            <label for="carousel-2" class="next control-1 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
+
+            <!--Slide 2-->
+            <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="" style="display: none;">
+            <div class="carousel-item absolute opacity-0" style="width: 100%;">
+                <img src="/assets/img/venueItem2.jpg" alt="">
+
+            </div>
+            <label for="carousel-1" class="prev control-2 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
+            <label for="carousel-3" class="next control-2 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
+
+            <!--Slide 3-->
+            <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="" style="display: none;">
+            <div class="carousel-item absolute opacity-0" style="width:100%;">
+                <img src="/assets/img/venueItem3.jpg" alt="">
+
+            </div>
+            <label for="carousel-2" class="prev control-3 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
+            <label for="carousel-1" class="next control-3 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
+
+            <!-- Add additional indicators for each slide-->
+            <ol class="carousel-indicators">
+                <li class="inline-block mr-3">
+                    <label for="carousel-1" class="carousel-bullet cursor-pointer block text-4xl text-white hover:text-blue-700">•</label>
+                </li>
+                <li class="inline-block mr-3">
+                    <label for="carousel-2" class="carousel-bullet cursor-pointer block text-4xl text-white hover:text-blue-700">•</label>
+                </li>
+                <li class="inline-block mr-3">
+                    <label for="carousel-3" class="carousel-bullet cursor-pointer block text-4xl text-white hover:text-blue-700">•</label>
+                </li>
+            </ol>
 
         </div>
-        <label for="carousel-3" class="prev control-1 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-yellow-500 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
-        <label for="carousel-2" class="next control-1 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
+    </div>
+    <!-- end slider -->
 
-        <!--Slide 2-->
-        <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="" style="display: none;">
-        <div class="carousel-item absolute opacity-0" style="width: 100%;">
-            <img src="/assets/img/venueItem2.jpg" alt="">
+
+    <!-- price card -->
+    <div class="max-w-sm rounded overflow-hidden shadow-lg text-black bg-indigo-100" style="margin-top: -181px; ;
+    position: sticky;
+    margin-left: 1300px;">
+        <img class="w-full" src="/assets/img/non-veg dish.jpeg" alt="Sunset in the mountains">
+        <div class="px-6 py-4">
+            <div class=" text-xl mb-2">vegetarian </div>
+            <p class="font-bold text-base text-2xl">
+                300/plate
+            </p>
+        </div>
+        <div class="px-6 py-4">
+            <div class=" text-xl mb-2">Non-vegetarian </div>
+            <p class="font-bold text-base text-2xl">
+                500/plate
+            </p>
+        </div>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-5  w-5/12">
+            Book Now
+          </button>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-5 mb-6 w-5/12">
+            Call   
+          </button>
+
+    </div>
+
+
+
+
+    <div class="container mx-auto text-black" style="margin-top:-300px; margin-left: 150px;">
+        <div class="container px-4 mx-auto mt-5 bg-white shadow border rounded py-12 px-12">
+
+
+            <div class="text-blueGray-700 text-5xl mb-2">Nirvana party Lawns</div>
+            <p class="mt-3"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> (1818)</p>
+            <p class="mt-3">Ahmedabad , Gujrat , India</p>
+            <p class="text-gray-700 text-base py-6" style="margin-right:300px ;">
+                ab non excepturi error autem, molestiae blanditiis possimus sapiente totam nesciunt aperiam fugit, consectetur illum numquam temporibus. Ea ducimus corporis cum inventore! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem perspiciatis ipsa
+                ab, temporibus ullam minus mollitia qui harum reprehenderit voluptas exercitationem accusantium architecto voluptates nesciunt similique. Itaque, corporis doloremque? Minus natus illum et in nesciunt ratione possimus quae rem velit.
+            </p>
+
+            <div class="container px-4 mx-auto">
+                <div class="flex flex-wrap">
+                    <!-- <div class="w-full  flex-1"> -->
+                    <div class="text-sm w-3/12  block my-4 px-3  text-blueGray-700 ">
+                        <div class="flex flex-wrap items-center">
+                            <i class="fas fa-couch text-3xl "> </i>
+                            <div style="display: flex; flex-direction: column;" class="ml-5 justify-center">
+                                <span class="text-2xl"> <strong> 500</strong></span>
+                                <span> Seating capacity </span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- </div> -->
+                    <div class="text-sm w-3/12 block justify-center my-4 px-3 text-blueGray-700  ">
+                        <div class="flex flex-wrap items-center">
+                            <i class="fas fa-couch text-3xl"> </i>
+                            <div style="display: flex; flex-direction: column;" class="ml-5 justify-center">
+                                <span class="text-2xl"> <strong> 500</strong></span>
+                                <span> Seating capacity </span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="text-sm w-3/12 block justify-right my-4 px-3 text-blueGray-700 ">
+                        <div class="flex flex-wrap">
+                            <i class="fas fa-couch text-3xl items-center"> </i>
+                            <div style="display: flex; flex-direction: column;" class="ml-5 justify-center">
+                                <span class="text-2xl"> <strong> 1500</strong></span>
+                                <span> Standing capacity </span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container  mx-auto mt-5">
+                <p class="text-3xl text-blueGray-700 font-bold"> Venue Price</p>
+                <div class="flex flex-wrap">
+                    <div class="w-1/3 px-4">
+                        <input class="text-sm w-10/12 block my-5 p-4 text-blueGray-700 rounded border border-solid border-blueGray-100" type="text" placeholder="Enter Date">
+                    </div>
+                    <div class="w-1/3 px-4">
+                        <input class="text-sm w-10/12 block my-5 p-4 text-blueGray-700 rounded border border-solid border-blueGray-100" type="text" placeholder="Guests Count">
+                    </div>
+                </div>
+                <button class="bg-red-500 w-2/12 my-5 p-4  ml-4 text-white active:bg-red-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                    See Price
+                  </button>
+            </div>
 
         </div>
-        <label for="carousel-1" class="prev control-2 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
-        <label for="carousel-3" class="next control-2 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
 
-        <!--Slide 3-->
-        <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="" style="display: none;">
-        <div class="carousel-item absolute opacity-0" style="width:100%;">
-            <img src="/assets/img/venueItem3.jpg" alt="">
+
+        <div class="px-6 ">
+
+            <hr class="mt-6">
+            <!-- Venue Estimate -->
+
+            <!-- End Venue estimate -->
+            <hr class="mt-6">
+
+            <div class="container px-4 mx-auto mt-5 bg-white shadow border rounded py-12 px-12">
+                <p class="text-3xl text-blueGray-700 font-bold mb-5"> Location</p>
+                <div class="flex flex-wrap">
+
+                    <div class="w-full px-4 ">
+                        <!-- <img src="/assets/img/location.jpeg" style="width: 60vw; height: 60vh;" class="mt-5" alt=""> -->
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.942835875197!2d72.50117111523556!3d23.025871021982276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e9b4ec502635d%3A0x366396c631ef7973!2sSolution%20Analysts!5e0!3m2!1sen!2sin!4v1649253769761!5m2!1sen!2sin"
+                            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <!-- <span class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-100">Sardar chowk pase,M.vejagam,Ta.Gondal,Dist:Rajkot....</span> -->
+                    </div>
+
+                </div>
+            </div>
+
+
+
+            <hr class="mt-6">
+
+            <div class="font-bold text-3xl text-blueGray-700  py-8 mb-2 ">Review</div>
+
+            <div>
+                <div class="block">
+                    <p class="text-xl"><strong>username</strong></p>
+                    <p class="mt-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae molestias sapiente, ipsum ipsam doloremque quae repudiandae molestiae quam? Laudantium perspiciatis, voluptatibus, voluptate molestias in maiores voluptas dignissimos recusandae
+                        eum accusamus laboriosam molestiae fugiat. Quia architecto dolorum, sint ad voluptatum dignissimos magni dolorem! Nam similique quis aperiam! Porro corporis alias nobis.</p>
+                </div>
+            </div>
+
+            <hr class="mt-6">
+
 
         </div>
-        <label for="carousel-2" class="prev control-3 w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 left-0 my-auto">‹</label>
-        <label for="carousel-1" class="next control-3 w-10 h-10 mr-2 md:mr-10 absolute cursor-pointer hidden text-3xl font-bold text-black hover:text-white rounded-full bg-white hover:bg-blue-700 leading-tight text-center z-10 inset-y-0 right-0 my-auto">›</label>
-
-        <!-- Add additional indicators for each slide-->
-        <ol class="carousel-indicators">
-            <li class="inline-block mr-3">
-                <label for="carousel-1" class="carousel-bullet cursor-pointer block text-4xl text-white hover:text-blue-700">•</label>
-            </li>
-            <li class="inline-block mr-3">
-                <label for="carousel-2" class="carousel-bullet cursor-pointer block text-4xl text-white hover:text-blue-700">•</label>
-            </li>
-            <li class="inline-block mr-3">
-                <label for="carousel-3" class="carousel-bullet cursor-pointer block text-4xl text-white hover:text-blue-700">•</label>
-            </li>
-        </ol>
 
     </div>
 </div>
-<!-- end slider -->
-
-<section class="bg-blueGray-200">
-    <!-- name -->
-    <div class="w-full px-4 flex-1">
-
-        <h1 class="text-4xl ml-10  "> <strong>Nirvana party Lawns</strong></h1>
-    </div>
-
-    <div class="container px-4 mx-auto ">
-        <!-- feature -->
-        <div class="w-full px-4 flex-1">
-
-            <h1 class="text-4xl "> Features</h1>
-        </div>
-
-        <div class="w-full px-4 flex-1 ml-40">
-            <li>it is a very beautifull</li>
-            <li>it is a very beautifull</li>
-            <li>it is a very beautifull</li>
-            <li>it is a very beautifull</li>
-            <li>it is a very beautifull</li>
-        </div>
-
-    </div>
-
-    <div class="container px-4 mx-auto mb-24">
-        <!-- price -->
-        <div class="w-full px-4 flex-1 mt-12">
-
-            <h1 class="text-4xl  mb-12 ">price</h1>
-        </div>
-
-        <div class="w-full px-4 flex-1">
-            <h3 class="ml-40">50000</h3>
-        </div>
-        <!-- description -->
-        <div class="w-full px-4 flex-1">
-
-            <h1 class="text-4xl  mb-12 mt-12 ">Description</h1>
-        </div>
-
-        <div class="w-full px-4 flex-1">
-            <h3 class="ml-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, modi. Fugit ipsa, ad maiores nemo vel, animi nam nesciunt magnam quis, placeat libero ipsam nihil veniam illo quas labore sit debitis. Ad quam expedita, animi earum ab explicabo
-                molestiae minus, ex perferendis suscipit fugit, non omnis veniam facere mollitia illo!</h3>
-        </div>
-        <!-- location -->
-        <div class="w-full px-4 flex-1">
-
-            <h1 class="text-4xl  mb-12 ">location</h1>
-        </div>
-
-        <div class="w-full px-4 flex-1">
-            <h3 class="ml-40 mb-24">ADdress: Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi qui porro pariatur! Delectus quas sit in excepturi, a inventore quisquam</h3>
-        </div>
-
-    </div>
-
-
-</section>
-
 
 <!-- </div> -->
 
 <!-- message box -->
 
-<section class="pb-20 relative block bg-blueGray-800">
+<section class="pb-20 relative block bg-blueGray-800 ">
     <div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20 h-20" style="transform: translateZ(0)">
         <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
     <polygon
