--- a/src/app/views/landing/landing.component.scss
+++ b/src/app/views/landing/landing.component.scss
@@ -6,8 +6,8 @@
 .carousel-item {
     -webkit-transition: opacity 0.6s ease-out;
     transition: opacity 0.6s ease-out;
-    width: 100vw;
-    height: 100vh;
+    width: 80vh;
+    height: 80vh;
     width: ful;
 }
 
