--- a/src/app/views/user/venue-list/venue-list.component.html
+++ b/src/app/views/user/venue-list/venue-list.component.html
@@ -79,8 +79,74 @@
       </div>
     </div>
   </section>
-  <section class="relative">
+  <section class="relative py-20">
+    <div class="container px-4 mx-auto">
+      <div class="flex flex-wrap justify-center">
+        <div class="w-1/2 px-4 md:w-4/12">
+          <div class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-700">
+            6 and md 4
+          </div>
+        </div>
+        <div class="w-full px-4 md:w-8/12">
+          <div class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-700">
+            <div class="container mx-auto">
+              <div class="flex flex-wrap border border-solid border-blueGray-700">
+                  <div class="text-sm block text-blueGray-700 rounded border border-solid border-blueGray-700">
+                    <img src="assets/img/angular.jpg" alt="" width="180">
+                  </div>
+                  <div class="w-full flex-1">
+                    <div class="px-3 py-3 text-2xl font-bold rounded border border-solid border-blueGray-700">
+                      Shree Maruti Banquet (Name)
+                    </div>
+                    <div class="flex flex-wrap">
+                      <div class="px-3 text-sm rounded border border-solid border-blueGray-700">
+                        Banquet (type)
+                      </div>
+                      <div class="px-3 text-sm rounded border border-solid border-blueGray-700">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i> <span class="font-bold">4.5</span> (Rating)
+                      </div>
+                    </div>
+                    <div class="px-3 text-sm rounded border border-solid border-blueGray-700">
+                      <p class="text-sm font-normal">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quisquam. In assumenda quis adipisci necessitatibus consequuntur dolores eveniet exercitationem minima eaque, mollitia illum autem quam, suscipit dolor nesciunt non (Description)
+                      </p>
+                      <button class="text-lightBlue-500 background-transparent font-semiboldpy-2 text-sm outline-none focus:outline-none hover:underline mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                        Read more...
+                      </button>
+                    </div>
+                    <div class="flex flex-wrap justify-end rounded border border-solid border-blueGray-700">
 
+                          <!-- <div class="w-full px-4 flex-1">
+                            <span class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-100">column</span>
+                          </div>
+                          <div class="w-full px-4 flex-1">
+                            <span class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-100">column</span>
+                          </div> -->
+                          <div class="w-full flex-1 items-center py-2">
+                            <div class="text-sm block text-blueGray-700 rounded border border-solid border-blueGray-100 px-3">
+                              <button class="background-transparent font-semibold outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                                <i class="fas fa-dot-circle text-emerald-500"></i> Vegetarian
+                              </button>
+                              <button class="background-transparent font-semibold outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                                <i class="fas fa-dot-circle text-red-500"></i> Non Vegetarian
+                              </button>
+                            </div>
+                          </div>
+                          <div class="w-full flex-1 justify-end">
+                            <div class="text-sm block text-blueGray-700 rounded border border-solid border-blueGray-100">
+                              <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                                Book Now <i class="fas fa-arrow-alt-circle-right ml-3"></i>
+                              </button>
+                            </div>
+                          </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
 <app-footer></app-footer>
