--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -189,6 +189,28 @@
           </a>
         </li>
 
+        <li class="items-center">
+          <a
+            [routerLink]="['/admin/website-settings']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #websiteSettings="routerLinkActive"
+            [ngClass]="
+            websiteSettings.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tools mr-2 text-sm"
+              [ngClass]="
+              websiteSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Website Settings
+          </a>
+        </li>
+
         <!-- <li class="items-center">
           <a
             [routerLink]="['/admin/maps']"
